# Chess-engine-

./: .gitignore  README.md  makefile
engine/: CMakeLists.txt  CMakePresets.json
engine/src/core/: engine.cpp  engine.hpp
engine/src/wasm/: bindings.cpp
engine/tests/: engine_tests.cpp
web/chess-engine-frontend/: index.html  package-lock.json
web/frontend/: .gitignore  package.json
web/frontend/src/: App.css  App.tsx
web/frontend/src/wasm/: engine.d.ts  engine.js  engine.wasm
